<resources>
    <string name="app_name">EduApp</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="login_register">Register new account</string>
    <string name="login_empty_fields">All fields must be filled to login</string>
    <string name="registration_empty_fields">All fields must be filled to register new account</string>
    <string name="registration_short_password">Password must have at least 6 symbols</string>
    <string name="registration_invalid_email">Please enter valid Email</string>
    <string name="registration_already_registered">This email already registered</string>
    <string name="login_error">This data do not match our records</string>
    <string name="password_reset_message">Enter your email and we will send you a message to reset your password</string>
    <string name="password_reset">Reset Password</string>
    <string name="posts_detail_your_comment">Write your reaction</string>
    <string name="new_post_hint">Write your post</string>
    <string name="posts_detail_send">Send</string>
    <string name="posts_detail_comments">Comments</string>
    <string name="posts_detail_save">Save</string>
    <string name="new_post_empty_field">You can not save blank post</string>
    <string name="new_post_empty_comment">You can not send empty comment</string>
    <string name="error_try_again">Error occurred. Try again</string>

    <string name="create_lesson">Create lesson</string>
    <string name="lessons">Lessons</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="text">Text</string>
    <string name="to_my_lessons">To My Lessons</string>
    <string name="title">Title</string>
    <string name="to_questions">To Questions</string>


    <string name="profile_username">Username</string>
    <string name="profile_to_blog">To Blog</string>
    <string name="profile_logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="registration">Registration</string>
    <string name="blog">Blog</string>
    <string name="posts">Posts</string>
    <string name="post">Post</string>
    <string name="new_post">New Post</string>
</resources>
