<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/create_lesson_add_text_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/text"
        app:layout_constraintEnd_toStartOf="@id/create_lesson_add_picture"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:id="@+id/create_lesson_title"
        android:hint="@string/title"
        app:layout_constraintTop_toTopOf="@id/create_lesson_add_text_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/create_lesson_add_text_btn"
        android:layout_marginHorizontal="8dp"
        android:inputType="text"/>

    <ImageView
        android:id="@+id/create_lesson_add_picture"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="start"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:foreground="?selectableItemBackgroundBorderless"
        android:importantForAccessibility="no"
        android:src="@drawable/baseline_insert_photo_24"
        android:text="@string/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@id/create_lesson_next_btn"
        app:layout_constraintTop_toBottomOf="@id/create_lesson_add_text_btn">

        <LinearLayout
            android:id="@+id/create_lesson_main_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <Button
        android:id="@+id/create_lesson_next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
